--- a/salesApp/app/views/layouts/application.html.erb
+++ b/salesApp/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="App">
+<html>
   <head>
   <meta charset="utf-8">
     <title>SalesApp</title>
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+
     <%= yield %>
   </body>
 </html>
