--- a/salesApp/app/views/user/new.html.erb
+++ b/salesApp/app/views/user/new.html.erb
@@ -1,9 +1,11 @@
-    <% if flash[:notice] %>
-    <div class="notice"><%= flash[:notice] %></div>
+  <% if flash[:notice] %>
+  <div class="notice"><%= flash[:notice] %></div>
   <% end %>
 
   <div class="col-lg-8">
   
+  <a class="btn btn-large" href="/">Home</a>
+
   <%= form_for :user do |f| %>
   <div class="field">
     <%= f.label :email %><br />
