--- a/salesApp/app/assets/javascripts/home/navbar.html.erb
+++ b/salesApp/app/assets/javascripts/home/navbar.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class="navbar-brand navbar-brand-centered"><a class="headerLogo" style="color:gray;" href="/">Victory Lap</a></div>
+          <div class="navbar-brand navbar-brand-centered"><a class="headerLogo" style="color:gray;" href="/" ng-click="vm.changeLocation('#/')">Victory Lap</a></div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,6 +20,7 @@
           </ul> -->
           <ul class="nav navbar-nav navbar-right">
             <!-- <li><a ng-show="vm.user.access_level === 'super_admin' && !vm.user" ui-sref=".register">Register</a></li> -->
+            <li><a ng-show="!!vm.user" ui-sref=".profile" ng-click="vm.changeLocation('#/profile')">Profile</a></li>
             <li><a ng-show="!vm.user" ng-click="showLoginForm = !showLoginForm" href="/">Login</a></li>
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
           </ul>
