--- a/salesApp/app/assets/javascripts/home/navbar.html.erb
+++ b/salesApp/app/assets/javascripts/home/navbar.html.erb
@@ -19,7 +19,7 @@
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>
           </ul> -->
           <ul class="nav navbar-nav navbar-right">
-            <!-- <li><a ng-show="vm.user.access_level === 'super_admin' && !vm.user" ui-sref=".register">Register</a></li> -->
+            <li><a ng-show="vm.user.access_level === 'super_admin'" href="/RegisterAdminSecretPage">Register Users</a></li>
             <li><a ng-show="!!vm.user" ui-sref=".profile" ng-click="vm.changeLocation('#/profile')">Profile</a></li>
             <li><a ng-show="!vm.user" ng-click="showLoginForm = !showLoginForm" href="/">Login</a></li>
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
