--- a/salesApp/app/assets/stylesheets/style.css
+++ b/salesApp/app/assets/stylesheets/style.css
@@ -167,3 +167,13 @@ a.headerLogo:hover {
 .panel-body input[type=checkbox]:checked + label { text-decoration: line-through;color: rgb(128, 144, 160); }
 .list-group-item:hover, a.list-group-item:focus {text-decoration: none;background-color: rgb(245, 245, 245);}
 .list-group { margin-bottom:0px; }
+
+
+#emailTable {
+    padding-left: 70px;
+}​
+
+#mytable{
+    table-layout: fixed;
+
+}
