--- a/salesApp/app/views/user/new.html.erb
+++ b/salesApp/app/views/user/new.html.erb
@@ -1,10 +1,17 @@
+  <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8">
+
+
+
   <% if flash[:notice] %>
   <div class="notice"><%= flash[:notice] %></div>
   <% end %>
 
-  <div class="col-lg-8">
+
   
   <a class="btn btn-large" href="/">Home</a>
+
+  <div class='content-container signup'>
+  <div class='wrapper container'>
 
   <%= form_for :user do |f| %>
   <div class="field">
@@ -48,4 +55,5 @@
   </div>
 <% end %>
 
+</div>
 </div>
