blocked someone that isnt locked in to go to other routes

--- a/salesApp/app/assets/javascripts/home/navbar.html.erb
+++ b/salesApp/app/assets/javascripts/home/navbar.html.erb
@@ -21,6 +21,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a ng-show="vm.user.access_level === 'super_admin'" href="/#/users" ng-click="vm.getUsers(); vm.changeLocation('#/users')">Users</a></li>
             <li><a ng-show="vm.user.access_level === 'super_admin'" href="/RegisterAdminSecretPage">Register Users</a></li>
+            <li><a ng-show="vm.user.access_level === 'company_admin'" href="/#/candidates">Candidates</a></li>
             <li><a ng-show="!!vm.user" ui-sref=".profile" ng-click="vm.changeLocation('#/profile')">Profile</a></li>
             <li><a ng-show="!vm.user" href="/">Login</a></li>
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
