email sending issues fixed

--- a/salesApp/app/views/interview_setup/interview_email.html.erb
+++ b/salesApp/app/views/interview_setup/interview_email.html.erb
@@ -10,6 +10,7 @@
       <p style="color: black;">Contact Information Below:</p>
       <p style="color: black;">Company: <%= @company.company%></p>
       <p style="color: black;">Representative: <%= @company.first_name%><%= @company.last_name %></p>
-      <p style="color: black;">Email: <%= @company.email%></p>      
+      <p style="color: black;">Email: <%= @company.email%></p>
+      <img src="/assets/images/vl.jpg">      
    </body>
 </html>
