--- a/salesApp/app/views/user/new.html.erb
+++ b/salesApp/app/views/user/new.html.erb
@@ -53,9 +53,9 @@
 
   <div class="field">
     <%= f.label :access_level %><br>
-    <%= f.radio_button :access_level, "candidate" %><%= f.label :access_level, "candidate" %>
-    <%= f.radio_button :access_level, "company_admin" %><%= f.label :access_level, "company_admin" %>
-    <%= f.radio_button :access_level, "super_admin" %><%= f.label :access_level, "super_admin" %>
+    Candidate<%= f.radio_button :access_level, "candidate" %>
+    Company Admin<%= f.radio_button :access_level, "company_admin" %>
+    Super Admin<%= f.radio_button :access_level, "super_admin" %>
   </div>
 
   <div class="field">
