--- a/salesApp/app/views/interview_setup/signup_email.html.erb
+++ b/salesApp/app/views/interview_setup/signup_email.html.erb
@@ -8,6 +8,6 @@
       <h1 style="color: black;">Welcome to Victory Lap's Portal <%=@user.first_name %>. Your login credentials are below:</h1>
       <p style="color: black;">Email: <%=@user.email%></p>
       <p style="color: black;">Password: <%=@user.password%></p>
-      <p style="color: black;">Please login to change your password and add the rest of your profile details. Feel free to reach out to Victory Lap if you have any questions!</p>
+      <p style="color: black;">Please login to change your password and add the rest of your profile details. Login Url: <b>https://victorylap.herokuapp.com/</b>. Feel free to reach out to Victory Lap if you have any questions!</p>
    </body>
 </html>
