--- a/salesApp/app/assets/javascripts/home/navbar.html.erb
+++ b/salesApp/app/assets/javascripts/home/navbar.html.erb
@@ -22,6 +22,7 @@
             <li><a ng-show="vm.user.access_level === 'super_admin'" href="/#/users" ng-click="vm.getUsers(); vm.changeLocation('#/users')">Users</a></li>
             <li><a ng-show="vm.user.access_level === 'super_admin'" href="/RegisterAdminSecretPage">Register Users</a></li>
             <li><a ng-show="vm.user.access_level === 'company_admin' || vm.user.access_level === 'super_admin'" href="/#/candidates" ng-click="vm.changeLocation('#/candidates')">Candidates</a></li>
+            <li><a ng-show="vm.user.access_level === 'company_admin' || vm.user.access_level === 'super_admin'" href="/#/jobs" ng-click="vm.changeLocation('#/jobs')">Jobs</a></li>
             <li><a ng-show="!!vm.user" ui-sref=".profile" ng-click="vm.changeLocation('#/profile')">Profile</a></li>
             <li><a ng-show="!vm.user" href="/">Login</a></li>
             <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
