--- a/salesApp/app/assets/stylesheets/jobs.scss
+++ b/salesApp/app/assets/stylesheets/jobs.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the jobs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.outlineJob {
+  background-color: lightgray;
+  padding: 2%;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
