--- a/salesApp/app/assets/stylesheets/jobs.scss
+++ b/salesApp/app/assets/stylesheets/jobs.scss
@@ -3,3 +3,13 @@
   padding: 2%;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
+
+.jobs-container{
+    position: relative;
+    margin: 0 auto;
+    width: 400px;
+    padding: 40px 40px;
+    text-align: center;
+    background: #fff;
+    border: 1px solid #ccc;
+}
