--- a/salesApp/app/assets/stylesheets/style.css
+++ b/salesApp/app/assets/stylesheets/style.css
@@ -21,7 +21,7 @@ a.headerLogo:hover {
     position: relative;
     width: 300px;
     margin: 80px auto;
-    padding: 20px 40px 40px;
+    padding: 40px 40px;
     text-align: center;
     background: #fff;
     border: 1px solid #ccc;
