--- a/salesApp/app/assets/stylesheets/jobs.scss
+++ b/salesApp/app/assets/stylesheets/jobs.scss
@@ -13,3 +13,11 @@
     background: #fff;
     border: 1px solid #ccc;
 }
+
+
+#truncate-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100px;
+}
