--- a/salesApp/app/views/interview_setup/interview_email.html.erb
+++ b/salesApp/app/views/interview_setup/interview_email.html.erb
@@ -5,11 +5,12 @@
    </head>
    
    <body>
-      <h1 style="color: black;">One of Victory Lap's partners wants to interview you <%= @user.first_name %>!</h1>
+      <h1 style="color: black;">One of Victory Lap's partners wants to interview you <%= user.first_name %>!</h1>
+      <p>See the job post here https://victorylap.herokuapp.com/#/job/<%=job%></p>
       <p style="color: black;">Please reach out to them to setup. They are cc'd on this email.</p>
       <p style="color: black;">Contact Information Below:</p>
-      <p style="color: black;">Company: <%= @company.company%></p>
-      <p style="color: black;">Representative: <%= @company.first_name%><%= @company.last_name %></p>
-      <p style="color: black;">Email: <%= @company.email%></p>
+      <p style="color: black;">Company: <%= company.company%></p>
+      <p style="color: black;">Representative: <%= company.first_name%><%= company.last_name %></p>
+      <p style="color: black;">Email: <%= company.email%></p>
    </body>
 </html>
