--- a/salesApp/app/views/layouts/application.html.erb
+++ b/salesApp/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html ng-app="app">
   <head>
   <meta charset="utf-8">
-    <title>SalesApp</title>
+    <title>Victory Lap</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <%= csrf_meta_tags %>
