fixed candidates showing

--- a/salesApp/app/assets/stylesheets/style.css
+++ b/salesApp/app/assets/stylesheets/style.css
@@ -185,3 +185,10 @@ a.headerLogo:hover {
     table-layout: fixed;
 
 }
+
+.profile-text {
+    color: #ECECEC;
+}
+.modalBackground {
+    background-color: #4B77BE;
+}
