--- a/salesApp/app/assets/javascripts/home/navbar.html.erb
+++ b/salesApp/app/assets/javascripts/home/navbar.html.erb
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class="navbar-brand navbar-brand-centered"><a class="headerLogo" style="color:gray;" href="/" ng-click="vm.changeLocation('#/')">Victory Lap</a></div>
+          <div class="navbar-brand navbar-brand-centered"><a class="headerLogo" style="color:gray;" href="/" ng-click="vm.changeLocation('#/')">Home</a></div>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -26,7 +26,9 @@
             <li><a ng-show="vm.user.access_level === 'company_admin' || vm.user.access_level === 'super_admin'" href="/#/jobs" ng-click="vm.changeLocation('#/jobs')">Jobs</a></li>
             <li><a ng-show="!!vm.user" ui-sref=".profile" ng-click="vm.changeLocation('#/profile')">Profile</a></li>
             <li><a ng-show="!vm.user" href="/">Login</a></li>
-            <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li>           
+            <li><a ng-show="!!vm.user" ng-click="vm.logout()">Logout</a></li> 
+            <li><a href="http://www.victorylap.io/" target="_blank">Website</a></li>
+            <li><a href="http://www.victorylap.io/blog/" target="_blank">Our Blog</a></li>          
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
