--- a/salesApp/app/assets/stylesheets/home.scss
+++ b/salesApp/app/assets/stylesheets/home.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+  .footer-section {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(121,121,121);
+  color: white;
+  }
