--- a/salesApp/app/views/layouts/application.html.erb
+++ b/salesApp/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html >
   <head>
   <meta charset="utf-8">
     <title>Victory Lap</title>
@@ -11,8 +11,8 @@
     <%= javascript_include_tag 'application'%>
   </head>
 
-  <body>
-
+  <body ng-app="app">
+  
     <%= yield %>
   </body>
 </html>
